# tt-docker-base

./: .dockerignore  Dockerfile  Dockerfile.base  Dockerfile.dev  Makefile  README.md  install-tools.sh  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
base/: Dockerfile
dev/: Dockerfile  dev-requirements.txt  package.json
node/: package-lock.json  package.json
scripts/: bump.py
