[[tool.poetry.source]]
name = 'private'
url = 'https://pypi.texastribune.org/simple'

[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "1.11.22"
six = "=1.10.0"
pytz = "=2016.10"
BeautifulSoup4 = "=4.6.3"
Pillow = "6.0.0"
django-inline-actions = "=1.0.0"
django-object-actions = "=0.9.0"
django-reversion = "=3.0.0"
django-tinymce = "=2.6.0"
pylibmc = "=1.5.0"
mailchimp3 = "=3.0.4"
python-magic = "=0.4.15"
nameparser = "=0.3.9"
django-flatblocks = "=0.9.4"
awscli = "=1.16.180"
boto3 = "=1.9.108"
django-storages = "=1.6.5"
django-localflavor = "=1.0"
invoke = "=1.1.1"
"armstrong.core.arm_wells" = "=1.10.0.dev7"
django-thumbor = "=0.5.7"
psycopg2 = "=2.6.1"
requests = "=2.21.0"
google-api-python-client = "=1.6.4"
google-auth-httplib2 = "=0.0.2"
feedparser = "=5.2.1"
django-locking = "=2.2.19.dev12"
django-axes = "=5.0.9"
django-jet = "=1.0.8.dev2"
django-admin-sortable2 = "=0.6.17"
django-cms = "=3.5.3"
djangocms-text-ckeditor = "=3.7.0"
djangocms_column = "=1.9.0"
djangocms-style = "=2.1.0"
djangocms-history = "=1.0.0"
django-codemirror-widget = "=0.4.1"
newrelic = "=4.20.1.121"
sentry-sdk = "=0.6.2"
djangorestframework = "=3.9.4"
django-rest-swagger = "=2.2.0"
django-crispy-forms = "=1.7.2"
djangorestframework-csv = "=2.1.0"
django-filter = "=2.1.0"
django-cors-headers = "=3.0.2"
whitenoise = "=3.3.1"
brotlipy = "=0.7.0"
uWSGI = "=2.0.16"
django-db-readonly = "=0.4.1"
django-environ = "=0.4.0"
tweepy = "=3.5.0"
watson-developer-cloud = "=2.4.0"
django-taggit = "=1.1.0.dev1"
python-jose = "=3.0.1"
dj-pagination = "=2.4"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "*"
django-extensions = "*"
mock = "^2"
fudge = "^1"
factory_boy = "^2"
fake-factory = "^0.7"
freezegun = "^0.3"
coverage = "*"
django-coverage = "^1"
flake8 = "^3"
postdoc = "*"
ipdb = "*"
ipython = "*"
pydevd = "^1.6"
pep8 = "^1.7"
Sphinx = "^2.0"
sphinxcontrib-confluencebuilder = "^1.1"
tblib = "^1.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
