[[tool.poetry.source]]
name = 'private'
url = 'https://pypi.texastribune.org/simple'

[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "2.2.27"
six = "1.10.0"
pytz = "2016.10"
BeautifulSoup4 = "4.6.3"
django-inline-actions = "2.3.0"
django-object-actions = "3.0.1"
django-reversion = "3.0.7"
django-tinymce = "3.4.0"
pylibmc = "1.5.0"
mailchimp3 = "3.0.9"
python-magic = "0.4.15"
nameparser = "0.3.9"
django-flatblocks = "1.0.0"
awscli = "1.21.7"
boto3 = "1.19.7"
django-storages = "1.6.5"
invoke = "1.1.1"
"armstrong.core.arm_wells" = "1.10.0.dev10"
django-thumbor = "0.5.7"
psycopg2 = "2.7.7"
requests = "^2.26.0"
feedparser = "5.2.1"
django-locking = "2.2.19.dev17"
django-axes = "1.3.6"
django-jet = "1.0.8.dev3"
django-admin-sortable2 = "0.7.5"
django-cms = "3.7.4"
django-treebeard = "4.4" # Can remove once the fix for this is available https://github.com/django-cms/django-cms/issues/6980
djangocms-text-ckeditor = "3.10.0"
djangocms-history = "1.0.0"
django-codemirror-widget = "0.5.0"
newrelic = "4.20.1.121"
sentry-sdk = "1.0.0"
djangorestframework = "3.12.4"
django-rest-swagger = "2.2.0"
django-crispy-forms = "1.14.0"
djangorestframework-csv = "2.1.0"
django-filter = "21.1.0"
django-cors-headers = "3.11.0"
whitenoise = "6.0.0"
brotlipy = "0.7.0"
uWSGI = "2.0.16"
django-db-readonly = "0.4.1"
django-environ = "0.4.0"
tweepy = "3.8.0"
watson-developer-cloud = "2.4.0"
django-taggit = "1.1.0.dev1"
python-jose = "3.0.1"
dj-pagination = "2.4"
django-auth0-client = "0.1.2"
django-health-check = "^3.11"
pillow = "=9.0.1"
rsa = "^4"
Markdown = "^3.3.4"
google-auth = "^2.0.1"
gspread = "^4.0.1"
slack-sdk = "^3.11.2"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "*"
django-extensions = "*"
mock = "^2"
fudge = "^1"
factory_boy = "^2"
fake-factory = "^0.7"
Faker = "^8"
freezegun = "^0.3"
coverage = "*"
django-coverage = "^1"
flake8 = "^3"
postdoc = "*"
ipdb = "*"
ipython = "*"
pydevd = "^1.6"
pep8 = "^1.7"
Sphinx = "^3.5"
sphinxcontrib-confluencebuilder = "^1.4"
tblib = "^1.3"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
